--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -1,16 +1,20 @@
 .norm {
   display: flex;
   justify-content: space-between;
-  padding: 12px 5px;
+  align-items: center;
+  padding: 10px 20px 10px 10px;
   border-radius: 5px;
-  margin: 0px;
+  margin: 0;
   background-color: #FF6060;
-  color: rgb(255, 255, 255);
+  color: #fff;
   cursor: pointer;
   width: 100%;
-  font-size: 24px;
-  text-align: center;
-  font-family: "montserrat";
+  max-width: 1023px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-align: left;
 }
 
 .hidden {
@@ -18,26 +22,39 @@
 }
 
 .content {
-  font-family: Montserrat;
+  font-family: "Montserrat", sans-serif;
   bottom: 20px;
   font-size: 18px;
   font-weight: 400;
-  line-height: 25.67px;
+  line-height: 26px;
   text-align: left;
   padding: 12px 25px;
   border-radius: 5px;
-  margin: 0px;
-  background-color: rgba(246, 246, 246, 0.4509803922);
+  margin: 0;
+  background-color: rgba(246, 246, 246, 0.45);
   cursor: pointer;
   width: 100%;
-  text-align: center;
+  max-width: 1023px;
   transition: all 3s ease-in-out;
+  text-align: start;
+  padding: 20px 15px;
+}
+.content p {
+  margin: 0;
 }
 
 .collapse-container {
-  padding: 30px 2.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+}
+
+.chevron {
+  transition: transform 1s ease-in-out;
+}
+
+.content-transition {
+  transition: max-height 1s ease-in-out;
+  overflow: hidden;
 }/*# sourceMappingURL=Collapse.css.map */
