--- a/src/components/Detail/Detail.scss
+++ b/src/components/Detail/Detail.scss
@@ -1,8 +1,6 @@
-
-
 // Variables
-$primary-color: #FF6060;
-$font-family: 'Montserrat', sans-serif;
+$primary-color: #ff6060;
+$font-family: "Montserrat", sans-serif;
 $max-width: 1240px;
 $border-radius: 15px;
 $font-size-h1: 36px;
@@ -13,211 +11,211 @@ $font-weight-medium: 500;
 $mobile-breakpoint: 768px;
 
 .detail-container {
-    margin: auto;
-    text-align: center;
-    width: 90%;
-    max-width: $max-width;
+  margin: auto;
+  text-align: center;
+  width: 90%;
+  max-width: $max-width;
 }
 
 .detail-img {
-    width: 100%;
-    height: 415px;
-    object-fit: cover;
-    border-radius: $border-radius;
+  width: 100%;
+  height: 415px;
+  object-fit: cover;
+  border-radius: $border-radius;
 }
 
 .detail-infos {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 90%;
-    max-width: $max-width;
-    margin: auto;
-    padding: 30px 0 24px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  max-width: $max-width;
+  margin: auto;
+  padding: 30px 0 24px;
 }
 
 .detail-content {
-    font-family: $font-family;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    display: flex;
-    flex-direction: column;
+  font-family: $font-family;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
 }
 
 .tagAndRating {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
 }
 
 .detail-content h1 {
-    color: $primary-color;
-    font-weight: $font-weight-medium;
-    font-size: $font-size-h1;
-    line-height: $line-height-h1;
-    margin: auto;
+  color: $primary-color;
+  font-weight: $font-weight-medium;
+  font-size: $font-size-h1;
+  line-height: $line-height-h1;
+  margin: auto;
 }
 
 .detail-content p {
-    font-family: $font-family;
-    font-size: $font-size-p;
-    font-weight: $font-weight-medium;
-    line-height: $line-height-p;
-    margin: auto;
-    line-height: 24px;
-    margin-bottom: 20px;
+  font-family: $font-family;
+  font-size: $font-size-p;
+  font-weight: $font-weight-medium;
+  line-height: $line-height-p;
+  margin: auto;
+  line-height: 24px;
+  margin-bottom: 20px;
 }
 
 .host-detail {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .host-detail p {
-    color: $primary-color;
-    font-family: $font-family;
-    font-weight: $font-weight-medium;
-    font-size: $font-size-p;
-    text-align: right;
-    width: min-content;
-    margin-right: 10px;
+  color: $primary-color;
+  font-family: $font-family;
+  font-weight: $font-weight-medium;
+  font-size: $font-size-p;
+  text-align: right;
+  width: min-content;
+  margin-right: 10px;
 }
 
 .picture-host img {
-    width: 64px;
-    height: 64px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 2px solid;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid;
 }
 
 .tag {
-    display: flex;
-    gap: 0.5rem;
+  display: flex;
+  gap: 0.5rem;
 }
 
 .rating {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .carousel {
-    position: relative;
+  position: relative;
 }
 
 .carousel-inner {
-    position: relative;
-    width: 100%;
-    max-width: $max-width;
-    margin: auto;
+  position: relative;
+  width: 100%;
+  max-width: $max-width;
+  margin: auto;
 }
 
 .carousel-control {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    color: rgb(255, 255, 255);
-    border: none;
-    padding: 10px;
-    font-size: 76px;
-    cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: rgb(255, 255, 255);
+  border: none;
+  padding: 10px;
+  font-size: 76px;
+  cursor: pointer;
 }
 
 .prev {
-    left: 30px;
+  left: 30px;
 }
 
 .next {
-    right: 30px;
+  right: 30px;
 }
 
 .image-counter {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: white;
-    font-weight: bold;
-    font-family: $font-family;
-    font-size: $font-size-p;
-    font-weight: $font-weight-medium;
-    line-height: 80px;
-    text-align: center;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: white;
+  font-weight: bold;
+  font-family: $font-family;
+  font-size: $font-size-p;
+  font-weight: $font-weight-medium;
+  line-height: 80px;
+  text-align: center;
 }
 
 @media (max-width: $mobile-breakpoint) {
-    .carousel-inner {
-        position: relative;
-        width: 100%;
-    }
+  .carousel-inner {
+    position: relative;
+    width: 100%;
+  }
 
-    .detail-img {
-        width: 100%;
-    }
+  .detail-img {
+    width: 100%;
+  }
 
-    .detail-infos {
-        display: flex;
-        flex-direction: column;
-        margin: auto;
-        padding: 15px 0 24px;
-    }
+  .detail-infos {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    padding: 15px 0 24px;
+  }
 
-    .detail-content h1 {
-        font-family: $font-family;
-        font-size: 18px;
-        font-weight: $font-weight-medium;
-        line-height: 25.67px;
-        text-align: left;
-    }
+  .detail-content h1 {
+    font-family: $font-family;
+    font-size: 18px;
+    font-weight: $font-weight-medium;
+    line-height: 25.67px;
+    text-align: left;
+  }
 
-    .detail-content p {
-        font-family: $font-family;
-        font-size: 14px;
-        font-weight: $font-weight-medium;
-        line-height: 19.96px;
-        text-align: left;
-        margin-top: 5px;
-        margin-bottom: 10px;
-    }
+  .detail-content p {
+    font-family: $font-family;
+    font-size: 14px;
+    font-weight: $font-weight-medium;
+    line-height: 19.96px;
+    text-align: left;
+    margin-top: 5px;
+    margin-bottom: 10px;
+  }
 
-    .tagAndRating {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-between;
-        align-items: center;
-    }
+  .tagAndRating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-    .star {
-        height: 18px;
-    }
+  .star {
+    height: 18px;
+  }
 
-    .host-detail p {
-        font-size: 12px;
-        font-weight: $font-weight-medium;
-        line-height: 18px;
-        text-align: right;
-    }
+  .host-detail p {
+    font-size: 12px;
+    font-weight: $font-weight-medium;
+    line-height: 18px;
+    text-align: right;
+  }
 
-    .picture-host img {
-        width: 45px;
-        height: 45px;
-        top: 0.5px;
-        left: 103.5px;
-        gap: 0;
-    }
+  .picture-host img {
+    width: 45px;
+    height: 45px;
+    top: 0.5px;
+    left: 103.5px;
+    gap: 0;
+  }
 
-    .prev,
-    .next {
-        width: 40px;
-        height: 40px;
-    }
+  .prev,
+  .next {
+    width: 40px;
+    height: 40px;
+  }
 
-    .image-counter {
-        display: none;
-    }
+  .image-counter {
+    display: none;
+  }
 }
