--- a/src/components/Photographer/Photographer.scss
+++ b/src/components/Photographer/Photographer.scss
@@ -1,10 +1,7 @@
-
-
-
 // Définition des variables
-$primary-color: #FF6060;
+$primary-color: #ff6060;
 $white-color: #fff;
-$font-family: 'Montserrat', sans-serif;
+$font-family: "Montserrat", sans-serif;
 $font-weight-bold: 700;
 $font-size-small: 14px;
 $border-radius: 10px;
