--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,10 +2,11 @@
   text-align: center;
   margin: auto;
   position: relative;
+  width: 90%;
+  max-width: 1240px;
 }
-
 .About-header img {
-  width: 95%;
+  width: 100%;
   height: 200px;
   -o-object-fit: cover;
      object-fit: cover;
@@ -13,8 +14,16 @@
 }
 
 .About-container {
-  width: 80%;
+  width: 70%;
   margin: auto;
-  margin-top: 30px;
+  margin-top: 38px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
+@media (max-width: 768px) {
+  .About-container {
+    width: 90%;
+  }
+}/*# sourceMappingURL=About.css.map */
