--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,16 +1,56 @@
 .header-container {
-  padding: 2rem 2.5rem;
+  padding: 50px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 90%;
+  max-width: 1240px;
+  margin: auto;
+  height: 68px;
+}
+@media (max-width: 768px) {
+  .header-container {
+    padding: 1rem;
+    height: auto;
+    align-items: flex-start;
+  }
+}
+
+@media (max-width: 768px) {
+  .header-container img {
+    width: 145px;
+    height: 46.88px;
+    gap: 0;
+  }
 }
 
 .nav-bar {
   display: flex;
   justify-content: space-between;
+  font-family: Montserrat;
+  max-width: 309px;
+  color: black;
+  font-size: 24px;
+  font-weight: 500;
+  height: 34px;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .nav-bar {
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 28px;
+    text-align: right;
+    gap: 26px;
+    align-items: baseline;
+  }
 }
 
 .nav-bar-item {
   margin-left: 30px;
-  color: #000000;
 }
+@media (max-width: 768px) {
+  .nav-bar-item {
+    margin-left: 0;
+  }
+}/*# sourceMappingURL=Header.css.map */
