--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,3 @@
-
-
 $desktop-width: 1240px;
 $tablet-width: 768px;
 $header-padding: 50px 0;
@@ -63,8 +61,6 @@ $nav-bar-item-margin: 30px;
 
   // Media query pour les petits écrans
   @media (max-width: $tablet-width) {
-    margin-left: 0; // Supprimer la marge à gauche pour les petits écrans
+    margin-left: 0;
   }
 }
-
-  
