--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,22 +2,38 @@
   text-align: center;
   margin: auto;
   position: relative;
- 
+  width: 90%;
+  max-width: 1240px;
 }
 
 .header-image {
-  width: 95%;
-  height: 200px;
+  width: 100%;
+  height: 223px;
   -o-object-fit: cover;
      object-fit: cover;
-  border-radius: 15px;
+  border-radius: 25px;
+  filter: brightness(60%);
 }
 
 .header-text {
-  font-size: 30px;
   color: white;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -100%);
+  transform: translate(-50%, -120%);
+  width: 100%;
+  font-size: 48px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+}
+
+@media (max-width: 768px) {
+  .header-text {
+    font-size: 24px;
+    text-align: start;
+    margin-left: 16px;
+  }
+  .header-image {
+    border-radius: 10px;
+  }
 }/*# sourceMappingURL=Home.css.map */
