--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,50 +1,47 @@
-
-
-
 // Variables
 $primary-color: white;
-$secondary-color: #FF6060;
-$font-family: 'Montserrat', sans-serif;
+$secondary-color: #ff6060;
+$font-family: "Montserrat", sans-serif;
 $max-width: 1240px;
 $border-radius: 25px;
 $mobile-border-radius: 10px;
 
 .home-container {
-    text-align: center;
-    margin: auto;
-    position: relative;
-    width: 90%;
-    max-width: $max-width;
+  text-align: center;
+  margin: auto;
+  position: relative;
+  width: 90%;
+  max-width: $max-width;
 }
 
 .header-image {
-    width: 100%;
-    height: 223px;
-    object-fit: cover;
-    border-radius: $border-radius;
-    filter: brightness(60%);
+  width: 100%;
+  height: 223px;
+  object-fit: cover;
+  border-radius: $border-radius;
+  filter: brightness(60%);
 }
 
 .header-text {
-    color: $primary-color;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -120%);
-    width: 100%;
-    font-size: 48px;
-    font-weight: 700;
-    font-family: $font-family;
+  color: $primary-color;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -120%);
+  width: 100%;
+  font-size: 48px;
+  font-weight: 700;
+  font-family: $font-family;
 }
 
 @media (max-width: 768px) {
-    .header-text {
-        font-size: 24px;
-        text-align: start;
-        margin-left: 16px;
-    }
+  .header-text {
+    font-size: 24px;
+    text-align: start;
+    margin-left: 16px;
+  }
 
-    .header-image {
-        border-radius: $mobile-border-radius;
-    }
+  .header-image {
+    border-radius: $mobile-border-radius;
+  }
 }
